--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-i18n",
-  "version": "0.0.6",
+  "name": "react-native-i18n-complete”,
+  "version": “0.0.7”,
   "description": "React Native and I18n.js integration",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "github.com:AlexanderZaytsev/react-native-i18n.git"
+    "url": "github.com:mrKlar/react-native-i18n.git"
   },
   "keywords": [
     "react-native",
@@ -16,7 +16,7 @@
     "ios",
     "i18n"
   ],
-  "author": "Alexander Zaytsev",
+  "author": "Alexander Zaytsev / Nicolas Desjardins“,
   "license": "MIT",
   "devDependencies": {
     "react-native": "^0.5.0"
