--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-i18n-complete",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React Native and I18n.js integration",
   "main": "index.js",
   "scripts": {
@@ -17,10 +17,10 @@
     "android",
     "i18n"
   ],
-  "author": "Alexander Zaytsev Nicolas Desjardins",
+  "author": "Alexander Zaytsev & Nicolas Desjardins",
   "license": "MIT",
   "devDependencies": {
-    "react-native": "^0.5.0"
+    "react-native": "^0.11.4"
   },
   "peerDependencies": {
     "react-native": ">=0.4.0 <1.0.0"
